feat: add documentation scraper with config and requirements

--- a/.gitignore
+++ b/.gitignore
@@ -209,3 +209,9 @@ __marimo__/
 # Agent Instructions (local only)
 CLAUDE.md
 agents.md
+
+# Scraped documentation (generated)
+frameworks/
+
+# Manifest (generated)
+manifest.json
